fix layout issue

--- a/src/main/webapp/static/css/todo7.css
+++ b/src/main/webapp/static/css/todo7.css
@@ -29,3 +29,12 @@
     margin: 0;
     color: #369;
 }
+
+.statusbar-overlay {
+    background: pink;
+}
+
+.navbar{
+	background: #000000;
+    color: white;
+}
